force-app/main/default/objects/Asset/fields/Activated_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Activated_DateTime__c</fullName>
    <description>Timestamp when Telco Network Controller confirmed successful network activation. Used in North Star KPI report: Asset.Activated_DateTime__c minus Order.ActivatedDate = Quote-to-Activation duration.</description>
    <label>Activated Date Time</label>
    <type>DateTime</type>
</CustomField>