force-app/main/default/objects/Asset/fields/IMEI_Scanned__c.field-meta.xml
<CustomField>
    <fullName>IMEI_Scanned__c</fullName>
    <description>Set to true by technician via Field Service mobile app when router IMEI is physically scanned at site. This field change triggers TelcoNetworkActivationQueueable to enqueue the Track 2 API activation call. 24-hour escalation timer starts on WorkOrder completion.</description>
    <label>IMEI Scanned</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>