force-app/main/default/objects/Asset/fields/OrderItemId__c.field-meta.xml
<CustomField>
    <fullName>OrderItemId__c</fullName>
    <description>Lookup to the originating OrderItem. Set when the Asset is created from the Order activation flow. Used by TelcoNetworkActivationQueueable (Track 2) and Asset_IMEI_Scan_Network_Activation Flow to enqueue async network activation after IMEI scan. See ADR-002.</description>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets__r</relationshipName>
    <type>Lookup</type>
</CustomField>